<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eColor" Id="{2d4793c1-58f6-429d-9a7b-7ee8144385f5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eColor :
(
	RED,
	GREEN,
	BLUE,
	WHITE
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>